--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_svg:  any
   animations:   any
+  page_indicator: ^0.3.0
 
 dev_dependencies:
   flutter_test:
